tests/ui/diagnostic-not-implemented-issue-1296.stable.stderr
error[E0277]: the trait bound `NotZerocopy: Immutable` is not satisfied
  --> $DIR/diagnostic-not-implemented-issue-1296.rs:50:19
   |
50 |     Foo.write_obj(NotZerocopy(()));
   |         --------- ^^^^^^^^^^^^^^^ the trait `Immutable` is not implemented for `NotZerocopy`
   |         |
   |         required by a bound introduced by this call
   |
note: required by a bound in `Foo::write_obj`
  --> $DIR/diagnostic-not-implemented-issue-1296.rs:56:21
   |
56 |     fn write_obj<T: Immutable + IntoBytes>(&mut self, _val: T) {}
   |                     ^^^^^^^^^ required by this bound in `Foo::write_obj`
help: consider borrowing here
   |
50 |     Foo.write_obj(&NotZerocopy(()));
   |                   +
50 |     Foo.write_obj(&mut NotZerocopy(()));
   |                   ++++

error[E0277]: the trait bound `NotZerocopy: IntoBytes` is not satisfied
  --> $DIR/diagnostic-not-implemented-issue-1296.rs:50:19
   |
50 |     Foo.write_obj(NotZerocopy(()));
   |         --------- ^^^^^^^^^^^^^^^ unsatisfied trait bound
   |         |
   |         required by a bound introduced by this call
   |
help: the trait `IntoBytes` is not implemented for `NotZerocopy`
  --> $DIR/../include.rs:15:5
   |
15 |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(IntoBytes)]` to `NotZerocopy`
   = help: the following other types implement trait `IntoBytes`:
             ()
             AU16
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
           and 78 others
note: required by a bound in `Foo::write_obj`
  --> $DIR/diagnostic-not-implemented-issue-1296.rs:56:33
   |
56 |     fn write_obj<T: Immutable + IntoBytes>(&mut self, _val: T) {}
   |                                 ^^^^^^^^^ required by this bound in `Foo::write_obj`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
